# game06

./: .clangd  .gitignore  CMakeLists.txt  README.md
assets/models/: cube01.mtl
assets/shaders/: 4.2.texture.fs  aura.fs.glsl  aura.vs.glsl  basic.fs.glsl  basic.vs.glsl  fragment1.glsl  fragment_font.glsl  gb.fs.glsl  gb.vs.glsl  map.mouse.fs.glsl  map.mouse.vs.glsl  model.2d.fs.glsl  model.2d.vs.glsl  model.cube.fs.glsl  model.cube.vs.glsl  model.id.fs.glsl  model.id.vs.glsl  model.map.fs.glsl  model.map.vs.glsl  text.fs.glsl  text.transforms.fs.glsl  text.transforms.vs.glsl  vertex1.glsl  vertex_font.glsl
game/: CMakeLists.txt  buffer.h  game.h  game_types.h  keys.h  load_texture.h  main.c  mouse.h  wavefront.h
include/: allocator.h  array.h  array_list.h  glm_wrap.h  glmath.h  list.h  map.h  mmath.h  str.h  str2.h
include/file/: file.h
models/: camera.h  model_2d.h  model_cube.h  model_floor.h  model_plane.h
notes/: git_how_to.txt  notes01.txt  todo.txt  todone.txt
png_to_array/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  all.c  test2.c  test_align.c  test_c_features.c  test_math.c
